# Planaria

./: .gitignore  package-lock.json  package.json
backend/planarian/: README.md  pyproject-old.toml  pyproject.toml  report.md
backend/planarian/knowledge/code_templates/: node_template.txt  python_template.txt  react_template.txt
backend/planarian/src/planarian/: api.py  crew.py  main.py  pyproject.toml  test_crew.py
backend/planarian/src/planarian/config/: agents.yaml  tasks.yaml
backend/planarian/src/planarian/tools/: code_generator_tool.py  config_validator_tool.py  prompt_optimizer_tool.py  template_manager_tool.py
src/: middleware.js
src/app/: layout.jsx  page.js  page.jsx
src/app/auth/login/: page.jsx
src/app/protected/: page.jsx
src/app/sign-in/[[...sign-in]]/: page.jsx
src/app/sign-up/[[...sign-up]]/: page.jsx'
src/components/: Navbar.jsx
src/components/Landing/: Hero.jsx
src/components/common/: RevealOnScroll.jsx
