[project]
name = "planarian"
version = "0.1.0"
description = "planarian using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
]

[project.scripts]
planarian = "planarian.main:run"
run_crew = "planarian.main:run"
train = "planarian.main:train"
replay = "planarian.main:replay"
test = "planarian.main:test"
run_with_trigger = "planarian.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
